# xnor

./: .gitignore  Cargo.toml  build.rs
src/: array.rs  lib.rs  main.rs  shape.rs  shapes.rs  tensor.rs  tensor_ops.rs
src/tensor/: generic_tensor.rs
xnor/: Cargo.toml
xnor-codegen/: Cargo.toml
xnor-codegen/src/: common.rs  lib.rs  ranks.rs  ranks_import.rs  tensor_from_array.rs
xnor-core/: Cargo.toml
xnor-core/src/: lib.rs  shape.rs
xnor-macros/: Cargo.toml
xnor-macros/src/: generate_rank_structs.rs  generate_tensor_from_array.rs  generate_tensor_from_implementations.rs  lib.rs
xnor-macros/tests/: tests.rs
xnor-macros/tests/expand/pass/: generate_rank_structs.out.rs  generate_rank_structs.rs  generate_rank_structs_test.out.rs  generate_rank_structs_test.rs
xnor/src/: lib.rs  main.rs  old_array.rs
