[package]
name = "xnor-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xnor_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
xnor-core = { path = "../xnor-core" }
darling = "0.20.9"
proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = "2.0.66"


[dev-dependencies]
trybuild = "1.0.96"
tryexpand = "0.8.4"

