workspace = { members = ["xnor-macros"] }

[package]
name = "xnor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xnor-macros = { path = "./xnor-macros" }

[dependencies.num-traits]
version = "0.2"
default-features = false
